2008-05-13  Mike Kestner <mkestner@novell.com> 

	* libsteticui/Application.cs: refactor to split out isolated backend
	and inprocess backend cases.  Dispose additions.  Destroy handling for
	the public accessors.
	* libsteticui/ApplicationBackendController.cs: use IsolatedApplication.
	* libsteticui/PluggableWidget.cs: IsolatedApplication handling and
	dispose rework.
	* libsteticui/Project.cs: ditto.
	* stetic/Stetic.cs: use new ApplicationFactory.

2008-05-13  Mike Kestner <mkestner@novell.com> 

	* libsteticui/AssemblyResolver.cs: update to JBs latest Linker version.
	* libsteticui/CecilWidgetLibrary.cs: use new cache API.
	* libsteticui/LibraryCache.cs: rewritten to use instances, 
	XmlSerialization of the index and keep the index in memory, and to add
	HasWidgets capability.  Should be able to remove the other cache from
	Application now.

2008-05-11  Mike Kestner <mkestner@novell.com> 

	* libsteticui/SignalsEditor.cs: some Disposal bulletproofing.

2008-04-30  Mike Kestner <mkestner@novell.com> 

	* libstetic/wrapper/objects.xml: clamp Gtk.Misc.(X|Y)align to values
	between 0.0 and 1.0.

2008-02-28  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/editor/ActionItem.cs: Properly handle drag event fired by
	  the widget selection box. Fixes bug #363865.

2008-02-28  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilClassDescriptor.cs,
	  libsteticui/CecilWidgetLibrary.cs: Properly load icons from
	  resurces.

2008-02-25  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/ErrorWidget.cs: Always write the ErrorWidget by reusing the
	  xml that generated it, unless we are exporting to another format,
	  in which case we can't write the same xml, and we replace it by a
	  label. Fixes bug #362596.

2008-02-21  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilClassDescriptor.cs: Don't create black boxes for
	  custom widgets which allow children. Fixes bug #361650.
	* libsteticui/ContextMenu.cs: Dont show invisible commands.